[package]
name = "native-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"

[dependencies.libipld]
version     = "0.16.0"
features    = [
    "dag-cbor",
    "dag-json",
    "dag-pb",
    "derive"
]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "smoke"
harness = false
